// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserProfileMenuComponent renders correctly 1`] = `
<RCTScrollView
  contentContainerStyle={
    Object {
      "backgroundColor": "#E5E5E5",
      "paddingHorizontal": 14,
      "paddingVertical": 8,
    }
  }
  data={
    Array [
      Object {
        "currency": "TWD",
        "id": 123,
        "price": 3,
        "status": "available",
        "title": "enen",
      },
    ]
  }
  disableVirtualization={false}
  extraData={undefined}
  getItem={[Function]}
  getItemCount={[Function]}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  numColumns={1}
  onContentSizeChange={[Function]}
  onEndReached={undefined}
  onEndReachedThreshold={5}
  onLayout={[Function]}
  onMomentumScrollEnd={[Function]}
  onRefresh={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  onViewableItemsChanged={undefined}
  refreshControl={
    <RefreshControlMock
      onRefresh={[Function]}
      refreshing={false}
    />
  }
  refreshing={false}
  removeClippedSubviews={false}
  renderItem={[Function]}
  renderScrollComponent={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
  updateCellsBatchingPeriod={50}
  windowSize={21}
>
  <RCTRefreshControl />
  <>
    <
      onLayout={[Function]}
    >
      <
        style={
          Object {
            "backgroundColor": "white",
            "elevation": 2,
            "justifyContent": "center",
            "margin": 5,
            "shadowColor": "black",
            "shadowOffset": Object {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 0.6,
            "shadowRadius": 1,
          }
        }
      >
        <
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Object {
              "paddingHorizontal": 10,
              "paddingTop": 10,
            }
          }
        >
          enen
        </>
        <
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#E5E5E5",
              "paddingHorizontal": 10,
              "paddingVertical": 10,
            }
          }
        >
          NT$3
        </>
        <
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          collapsable={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "borderColor": "#E5E5E5",
              "borderTopWidth": 1,
              "flexDirection": "row",
              "justifyContent": "center",
              "opacity": 1,
              "paddingVertical": 20,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#DA3944",
                "textAlign": "center",
              }
            }
          >
            LBL_OUT_OF_STOCK
          </>
        </>
      </>
    </>
  </>
</RCTScrollView>
`;

exports[`UserProfileMenuComponent renders correctly 2`] = `
<RCTScrollView
  contentContainerStyle={
    Object {
      "backgroundColor": "#E5E5E5",
      "paddingHorizontal": 14,
      "paddingVertical": 8,
    }
  }
  data={
    Array [
      Object {
        "currency": "TWD",
        "id": 123,
        "price": 3,
        "status": "available",
        "title": "enen",
      },
    ]
  }
  disableVirtualization={false}
  extraData={undefined}
  getItem={[Function]}
  getItemCount={[Function]}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  numColumns={1}
  onContentSizeChange={[Function]}
  onEndReached={undefined}
  onEndReachedThreshold={5}
  onLayout={[Function]}
  onMomentumScrollEnd={[Function]}
  onRefresh={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  onViewableItemsChanged={undefined}
  refreshControl={
    <RefreshControlMock
      onRefresh={[Function]}
      refreshing={false}
    />
  }
  refreshing={false}
  removeClippedSubviews={false}
  renderItem={[Function]}
  renderScrollComponent={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
  updateCellsBatchingPeriod={50}
  windowSize={21}
>
  <RCTRefreshControl />
  <>
    <
      onLayout={[Function]}
    >
      <
        style={
          Object {
            "backgroundColor": "white",
            "elevation": 2,
            "justifyContent": "center",
            "margin": 5,
            "shadowColor": "black",
            "shadowOffset": Object {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 0.6,
            "shadowRadius": 1,
          }
        }
      >
        <
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Object {
              "paddingHorizontal": 10,
              "paddingTop": 10,
            }
          }
        >
          enen
        </>
        <
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#E5E5E5",
              "paddingHorizontal": 10,
              "paddingVertical": 10,
            }
          }
        >
          NT$3
        </>
        <
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          collapsable={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "borderColor": "#E5E5E5",
              "borderTopWidth": 1,
              "flexDirection": "row",
              "justifyContent": "center",
              "opacity": 1,
              "paddingVertical": 20,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <
            animating={true}
            color="rgba(43, 214, 101, 1)"
            hidesWhenStopped={true}
            size="small"
          />
        </>
      </>
    </>
  </>
</RCTScrollView>
`;
